<resources>
    <string name="app_name">Chatik bez backenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_chat_invite">Invite friends</string>
    <string name="menu_chat_users">Chat members</string>

    <string name="action_message_copied">Message copied to clipboard</string>
    <string name="action_chat_id_copied">Chat id copied to clipboard</string>

    <string name="title_new_chat">New chat</string>
    <string name="title_find_chat">Find chat</string>
    <string name="title_find">Find</string>
    <string name="title_chat_id">Chat id</string>
    <string name="title_chat_name">Chat name</string>
    <string name="title_upload_photo">Avatar (optional)</string>
    <string name="title_create">Create</string>
    <string name="title_online">Online</string>
    <string name="title_you">You</string>
    <string name="title_account">Account</string>
    <string name="title_message">Message</string>
    <string name="title_photo">Photo</string>
    <string name="title_properties">Properties</string>
    <string name="error_upload_file">Failed to upload file</string>
    <string name="title_remove_photo">Remove photo</string>
    <string name="title_chats">Chats</string>
    <string name="title_channels">Channels</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_signature">Your signature</string>
    <string name="title_reply">Default reply action</string>
    <string name="title_file">File</string>


    <string name="open">open</string>
    <string name="close">close</string>

    <string name="easter_1">I don\'t have any function.</string>
    <string name="easter_2">I\'m not joking bro. Stop this</string>
    <string name="easter_3">I\'m just a logo with a ripple effect…</string>
    <string name="easter_4">OK. You can click as much as you want</string>
    <string name="easter_5">Oops.</string>
    <string name="easter_6">Oh, you\'re stubborn</string>
    <string name="easter_7">Here we go!</string>
    <string name="easter_8">What an accurate finger…</string>
    <string name="easter_9">BOO!!!</string>
    <string name="easter_10">Congrats with your 100 click!</string>
    <string name="easter_11">May be it\'s time to stop?</string>
    <string name="easter_12">OK. Do you like kitties?</string>
    <string name="easter_kitties">OK. Do you like kitties?</string>
    <string name="yes">Yes!</string>
    <string name="easter_yes">Yes, but red</string>
    <string name="easter_13">I knew it. This is for you</string>
    <string name="easter_14">150 click! You won a prize. Login to get it</string>
    <string name="easter_15">The game is really over =) All other clicks will redirect you to login procedure. Bye!</string>

    <string name="error_notfound">There are no chats with that name</string>
    <string name="error_load_dialogs">Failed to get dialogs. Check your Internet connection.</string>
    <string name="error_chat_load">Failed to get chat info. Check your Internet connection.</string>
    <string name="error_send_message">Failed to send message. Check your Internet connection.</string>
    <string name="error_google_connecting">Cannot connect to google services</string>
    <string name="error_server">Server error</string>
    <string name="error_google_login">Login error</string>
    <string name="error_gservices_ver">Google Play services out of date. Requires 12451000 but found </string>
    <string name="error_empty_message">Message can\'t be empty</string>
    <string name="error_empty_input">Input is empty</string>
    <string name="error_chat_not_found">Chat not found</string>

    <!-- Preference Titles -->
    <string name="header_theme">Theme</string>
    <string name="header_messages">Messages</string>
    <string name="header_sync">Sync</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="transition_image_fullscreen" translatable="false">transition_message_image</string>>
</resources>

